<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

   <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg" >

        <!-- Header Starts -->

        
        <!-- Header Ends -->
        <!-- Footer Start -->
		<RelativeLayout
        android:id="@id/cartTotalLayout"
        style="@style/CartFooter"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <TextView
            android:id="@+id/cartTotal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dip"
            android:paddingBottom="10dip"
            android:text="Total: $432.2"
            android:textColor="@color/white" />
        </RelativeLayout>

        <!-- Footer Ends -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/banner"
            android:orientation="vertical"
            android:padding="10dip" >
            
             <!-- Text Label -->
		    <TextView
		        android:id="@+id/cardholderName_Text"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dip"
		        android:text="@string/cardName"
		        android:textColor="@color/white"
		        android:layout_marginBottom="5dp"
		    />
		 
		    <EditText
                android:id="@+id/cardName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardholderName_Text"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:singleLine="true" />
            <TextView
                android:id="@+id/cardAddress_Text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardName"
                android:text="@string/cardAddress"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/cardAddress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardAddress_Text"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:singleLine="true" />     
		 

            <!-- Error message -->

            <TextView
                android:id="@+id/checkout2_error"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:textColor="#e30000"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardAddress"
                android:layout_marginTop="20dip"
                android:text="@string/submit"
                android:textColor="@color/white" />

        </RelativeLayout>
    </RelativeLayout>

</ScrollView>